<resources>
    <string name="app_name">MyFirstApplication</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="don_t_have_account_sing_up">Don\'t have account. Sing up?</string>
    <string name="relative">Relative</string>
</resources>